--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,13 @@
     <a routerLink="/profile">Perfil</a>
   </nav>
   <div class="header-right">
-    <a routerLink="/cart" class="cart-btn">🛒</a>
+    <button class="cart-btn" (click)="openCart()">
+      🛒
+      <span class="cart-badge" *ngIf="itemCount() > 0">{{ itemCount() }}</span>
+    </button>
     <a routerLink="/login" class="login-btn">Iniciar Sesión</a>
   </div>
 </header>
 
 <router-outlet></router-outlet>
+<app-cart-modal></app-cart-modal>
